# LaserController

./: .gitignore  README.md  presentation.pptx
Electronics/laser_controller/: Laser_control.bak  Laser_control.kicad_sym  bom.csv  fp-info-cache  gerbers.rar  laser_controller-top-pos.csv  laser_controller.kicad_pcb  laser_controller.kicad_prl  laser_controller.kicad_pro  laser_controller.kicad_sch  laser_controller.kicad_sch-bak  sym-lib-table
Electronics/laser_controller/gerbers/: laser_controller-B_Cu.gbr  laser_controller-B_Mask.gbr  laser_controller-B_Paste.gbr  laser_controller-B_Silkscreen.gbr  laser_controller-Edge_Cuts.gbr  laser_controller-F_Cu.gbr  laser_controller-F_Mask.gbr  laser_controller-F_Paste.gbr  laser_controller-F_Silkscreen.gbr  laser_controller-NPTH.drl  laser_controller-PTH.drl  laser_controller-job.gbrjob
Electronics/laser_controller/parts/: IND_XEL4030-102MEC.kicad_mod  MCP6022T-I_SN.kicad_sym  (+3 more)
GrussmayerLab-LaserController/: GrussmayerLab-LaserController.vcxproj  GrussmayerLab-LaserController.vcxproj.filters  LaserManager.cpp  LaserManager.h  Protocol.cpp  Protocol.h
LaserControlDeviceControl/GrussmayerLab-LaserController/: GrussmayerLab-LaserController.vcxproj.filters
LaserControlFirmware/: CMakeLists.txt  LaserController.uf2  README.md  main.cpp
LaserControlFirmware/lib/mcp4922/: CMakeLists.txt  mcp4922.cpp  mcp4922.h
LaserControlGUI/: .classpath  .project
LaserControlGUI/.metadata/: version.ini
LaserControlGUI/EMU/: config.uicfg
LaserControllerUI/: .classpath  .project
LaserControllerUI/.metadata/: version.ini
(+22 files in other folders)
